<resources>
    <string name="app_name">PhoneApp</string>
    <string name="answer">Answer</string>
    <string name="hang_up">Hang up</string>
    <string name="call_input_hint">Call…</string>
    <string name="_0">0</string>
    <string name="_1">1
        egyenleg</string>
    <string name="_2">2
        saját szám</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="del_buttonHUN">Törlés</string>
    <string name="call_buttonHUN">Hívás indítása</string>
    <string name="end_call_buttonHUN">Hívás befejezése</string>
    <string name="speaker_buttonHUN">Kihangosítás</string>
</resources>