<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".DialerActivity">

    <TextView
        android:id="@+id/phoneNumberTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="253dp"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberTextView">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="visible">

            <Button
                android:id="@+id/button1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:longClickable="true"
                android:minWidth="120dip"
                android:text="@string/_1"
                android:visibility="visible" />

            <Button
                android:id="@+id/button2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:longClickable="true"
                android:minWidth="120dip"
                android:text="@string/_2"
                android:visibility="visible" />

            <Button
                android:id="@+id/button3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="120dip"
                android:text="@string/_3"
                android:visibility="visible" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/button4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4"
                android:visibility="visible" />

            <Button
                android:id="@+id/button5"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5"
                android:visibility="visible" />

            <Button
                android:id="@+id/button6"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_6"
                android:visibility="visible" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/button7"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7"
                android:visibility="visible" />

            <Button
                android:id="@+id/button8"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_8"
                android:visibility="visible" />

            <Button
                android:id="@+id/button9"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_9"
                android:visibility="visible" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:visibility="visible"
                style="?android:attr/buttonBarButtonStyle" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/buttonPlaceholder"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:visibility="invisible" />

            <ImageButton
                android:id="@+id/buttonCall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#40D546"
                android:contentDescription="@string/call_buttonHUN"
                android:minHeight="48dp"
                app:srcCompat="@drawable/baseline_phone_24" />

            <ImageButton
                android:id="@+id/buttonBackspace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/del_buttonHUN"
                android:minHeight="48dp"
                android:visibility="invisible"
                app:srcCompat="@drawable/baseline_backspace_24" />

        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>